@@ -84,8 +84,17 @@ ospf_router_id_update (struct ospf *ospf)
 
   router_id_old = ospf->router_id;
 
+  /* Select the router ID based on these priorities:
+       1. Statically assigned router ID is always the first choice.
+       2. If there is no statically assigned router ID, then try to stick
+          with the most recent value, since changing router ID's is very
+	  disruptive.
+       3. Last choice: just go with whatever the zebra daemon recommends.
+  */
   if (ospf->router_id_static.s_addr != 0)
     router_id = ospf->router_id_static;
+  else if (ospf->router_id.s_addr != 0)
+    router_id = ospf->router_id;
   else
     router_id = router_id_zebra;
 
